[200~recipes/spaghetti-aglio-e-olio.jpg

--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -1,1 +1,26 @@
-<h1>Spaghetti Aglio e Olio</h1>
+<!DOCKTYPE html>
+<html lang="en"> 
+    <head>
+        <meta charset="UTF-8">
+        <title>Odin Recipes</title>
+    </head>
+    <body>
+        <h1>Spaghetti Aglio e Olio</h1>
+        <img src="./spaghetti-aglio-e-olio.jpg" alt="The photo of Spaghetti AGlio e Olio">
+        <p><strong> Description </strong></p>
+        <p><em>Spaghetti aglio e olio</em> translates to “spaghetti with garlic and oil.”
+            The traditional dish contains little more than these ingredients.
+            It might be finished with a sprinkle of parsley or a pinch of red pepper flakes,
+            but even these are optional.In its simplest form, this classic Italian pasta features 
+            spaghetti, olive oil, garlic, salt, and pepper.
+        </p>
+        <p> But if you have ever tried it, you know that <em>spaghetti aglio e olio</em> is far more 
+            than the sum of its parts. The garlic infuses the oil with rich, nutty flavor, 
+            and salty, starchy pasta cooking water transforms it into a deeply flavorful
+            sauce. Add perfect al dente pasta to the mix, and it is absolute heaven.
+        </p>
+        <p><strong> Ingredients </strong></p>
+
+
+    </body>
+    </html>
