recipes/spaghetti.html

--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -6,21 +6,52 @@
     </head>
     <body>
         <h1>Spaghetti Aglio e Olio</h1>
-        <img src="./spaghetti-aglio-e-olio.jpg" alt="The photo of Spaghetti AGlio e Olio">
-        <p><strong> Description </strong></p>
-        <p><em>Spaghetti aglio e olio</em> translates to “spaghetti with garlic and oil.”
+            <img src="./spaghetti-aglio-e-olio.jpg" alt="The photo of Spaghetti AGlio e Olio">
+        <p><h2> Description </h2></p>
+            <p><em>Spaghetti aglio e olio</em> translates to “spaghetti with garlic and oil.”
             The traditional dish contains little more than these ingredients.
             It might be finished with a sprinkle of parsley or a pinch of red pepper flakes,
             but even these are optional.In its simplest form, this classic Italian pasta features 
             spaghetti, olive oil, garlic, salt, and pepper.
         </p>
+
         <p> But if you have ever tried it, you know that <em>spaghetti aglio e olio</em> is far more 
             than the sum of its parts. The garlic infuses the oil with rich, nutty flavor, 
             and salty, starchy pasta cooking water transforms it into a deeply flavorful
             sauce. Add perfect al dente pasta to the mix, and it is absolute heaven.
         </p>
-        <p><strong> Ingredients </strong></p>
+            <p><h2> Ingredients </h2></p>
 
+            <ul>
+                <li>1 pound uncooked spaghetti</li>
+                <li>6 cloves garlic, thiny sliced</li>
+                <li>1/2 cup olive oil</li>
+                <li>1/4 teaspoon red papper flakes, or to taste</li>
+                <li>salt and freshly ground black papper to taste</li>
+                <li>1/4 cup chopped fresh Italian parsley</li>
+                <li>1 cup finely ground Parmigiano-Reggiano cheese</li>
+            </ul>
 
+            <p><h2>Steps</h2></p>
+             
+                <ol>
+                    <li><p>Bring a large pot of lightly salted water to a boil. Cook spaghetti in the boiling 
+                        water, stirring occasionally until cooked through but firm to the bite, about 12 
+                        minutes. Drain and transfer to a pasta bowl. 
+                    </p></li>
+
+                    <li><p>Combine garlic and olive oil in a cold skillet. Cook over medium heat to slowly
+                        toast garlic, about 10 minutes. Reduce heat to medium-low when olive oil 
+                        begins to bubble. Cook and stir until garlic is golden brown, about another 5 
+                        minutes. Remove from heat. 
+                    </p></li>
+
+                    <li><p>Stir red pepper flakes, black pepper, and salt into the pasta. Pour in olive oil and
+                        garlic, and sprinkle on Italian parsley and half of the Parmigiano-Reggiano 
+                        cheese; stir until combined. 
+                    </p></li>
+
+                    <li>Serve pasta topped with the remaining Parmigiano-Reggiano cheese.</li>
+                </ol>
     </body>
     </html>
