--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/spaghetti.html">Spaghetti Aglio e Olio</a>
-    </body>
+        <ul>
+            <li><a href="recipes/spaghetti.html">Spaghetti Aglio e Olio</a></li>
+            <li><a href="recipes/meatballs.html">Italian Meatballs</a></li>
+            <li></li>
+        </ul>    
+        </body>
 </html>
