--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <ul>
             <li><a href="recipes/spaghetti.html">Spaghetti Aglio e Olio</a></li>
             <li><a href="recipes/meatballs.html">Italian Meatballs</a></li>
-            <li></li>
+            <li><a href="recipes/panna-cotta.html">Panna Cotta</a></li>
         </ul>    
         </body>
 </html>
