images/meatballs.png

--- a/recipes/meatballs.html
+++ b/recipes/meatballs.html
@@ -3,13 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <title>Italian Meatballs</title>
+        <link rel="stylesheet" href="meatballs.css">
     </head>
     <body>
+        <img src="/home/elena/repos/odin-recipes/images/the-odin-project.png" alt="The Odin Project" class="center">
         <h1>The Perfect Italian Meatballs</h1>
-            <img src="./meatballs.jpg" alt="The photo of Italian Meatballs">
+            <img src="./meatballs.jpg" alt="The photo of Italian Meatballs" class="meatballs">
         <p><h2> Description </h2></p>
 
-        <p>I never knew how to make good meatballs until I found this recipe. 
+        <p class="description">I never knew how to make good meatballs until I found this recipe. 
             I normally make mine with just ground beef and they still taste great.
             I've used the combination of pork, beef and veal and they are equally good.
             Definitely use fresh bread crumbs and freshly grate your cheese instead of using the canned variety...
@@ -17,7 +19,7 @@
         </p>
 
         <p><h2>Ingredients</h2></p>
-            <ul>
+            <ul class="ingredients">
                 <li>1 pound ground beef</li>
                 <li>1/2 pound ground veal</li>
                 <li>1/2 pound ground pork</li>
@@ -31,7 +33,7 @@
                 <li>1 cup olive oil</li>
             </ul>
                     <p><h2>Steps</h2></p>
-                        <ol>
+                        <ol class="steps">
                             <li><p>Combine beef, veal, and pork in a large bowl.
                                  Add garlic, eggs, cheese, parsley,
                                  salt and pepper. </p></li>
@@ -44,5 +46,6 @@
                                 and drain on a paper towel. (If your mixture is too wet, cover 
                                 the meatballs while they are cooking so that they hold their shape better.) </li>
                         </ol>
+                        <img src="/home/elena/repos/odin-recipes/images/odin-mascot.svg" alt="Odin pic" class="odin-mascot">
     </body>
 </html>
