--- a/index.html
+++ b/index.html
@@ -3,13 +3,21 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <img src="/home/elena/repos/odin-recipes/images/the-odin-project.png" alt="The Odin Project" class="center">
         <h1>Odin Recipes</h1>
-        <ul>
-            <li><a href="recipes/spaghetti.html">Spaghetti Aglio e Olio</a></li>
-            <li><a href="recipes/meatballs.html">Italian Meatballs</a></li>
-            <li><a href="recipes/panna-cotta.html">Panna Cotta</a></li>
-        </ul>    
+
+            <img src="/home/elena/repos/odin-recipes/images/pasta.png" alt="Pasta on plate" class="pasta">
+            <h2><a href="recipes/spaghetti.html">Spaghetti Aglio e Olio</a></h2>
+
+            <img src="/home/elena/repos/odin-recipes/images/racoon.png" alt="Meatballs" class="racoon">
+            <h2><a href="recipes/meatballs.html">Italian Meatballs</a></h2>
+
+            <img src="/home/elena/repos/odin-recipes/images/panna-cotta.png" alt="Panna-cotta" class="panna-cotta">
+            <h2><a href="recipes/panna-cotta.html">Panna Cotta</a></h2>
+
+            <img src="/home/elena/repos/odin-recipes/images/odin-mascot.svg" alt="Odin pic" class="odin-mascot">
         </body>
 </html>
