--- a/recipes/panna-cotta.html
+++ b/recipes/panna-cotta.html
@@ -3,20 +3,22 @@
     <head>
         <meta charset="UTF-8">
         <title>Panna Cotta</title>
+        <link rel="stylesheet" href="panna-cotta.css">
     </head>
     <body>
+        <img src="/home/elena/repos/odin-recipes/images/the-odin-project.png" alt="The Odin Project" class="center">
         <h1>Italian Panna Cotta</h1>
-            <img src="./panna-cotta.jpg" alt="The photo of Panna Cotta in glass">
+            <img src="./panna-cotta.jpg" alt="The photo of Panna Cotta in glass" class="panna-cotta">
         <p><h2> Description </h2></p>
 
-        <p>One of the best known and frequently requested desserts, panna cotta -
+        <p class="description">One of the best known and frequently requested desserts, panna cotta -
             literally “cooked cream” - originated in Piedmont and is made of cream and sugar.
             There are different versions and flavorings. Its delicate sweetness, smooth
             texture and the elegant way it is plated make it a perfect treat at the end of a meal.
         </p>
 
         <p><h2>Ingredients</h2></p>
-            <ul>
+            <ul class="ingredients">
                 <li>1/3 cup skim milk</li>
                 <li>1 (.25 ounce) envelope unflavored gelatin</li>
                 <li>2 1/2 cups heavy cream</li>
@@ -25,7 +27,7 @@
 
             </ul>
                     <p><h2>Steps</h2></p>
-                        <ol>
+                        <ol class="steps">
                             <li><p> Pour milk into a small bowl. Sprinkle gelatin powder over milk and stir until 
                                 combined. Set aside.</p></li>
                             <li><p>Stir heavy cream and sugar together in a saucepan. Set over medium heat and
@@ -42,5 +44,6 @@
                                 preferably overnight. 
                             </li>
                         </ol>
+                        <img src="/home/elena/repos/odin-recipes/images/odin-mascot.svg" alt="Odin pic" class="odin-mascot">
     </body>
 </html>
