--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -3,26 +3,28 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="spaghetti.css">
     </head>
     <body>
+        <img src="/home/elena/repos/odin-recipes/images/the-odin-project.png" alt="The Odin Project" class="center">
         <h1>Spaghetti Aglio e Olio</h1>
-            <img src="./spaghetti-aglio-e-olio.jpg" alt="The photo of Spaghetti AGlio e Olio">
+            <img src="./spaghetti-aglio-e-olio.jpg" alt="The photo of Spaghetti AGlio e Olio" class="spaghetti">
         <p><h2> Description </h2></p>
-            <p><em>Spaghetti aglio e olio</em> translates to “spaghetti with garlic and oil.”
+            <p class="description"><em>Spaghetti aglio e olio</em> translates to “spaghetti with garlic and oil.”
             The traditional dish contains little more than these ingredients.
             It might be finished with a sprinkle of parsley or a pinch of red pepper flakes,
             but even these are optional.In its simplest form, this classic Italian pasta features 
             spaghetti, olive oil, garlic, salt, and pepper.
         </p>
 
-        <p> But if you have ever tried it, you know that <em>spaghetti aglio e olio</em> is far more 
+        <p class="description"> But if you have ever tried it, you know that <em>spaghetti aglio e olio</em> is far more 
             than the sum of its parts. The garlic infuses the oil with rich, nutty flavor, 
             and salty, starchy pasta cooking water transforms it into a deeply flavorful
             sauce. Add perfect al dente pasta to the mix, and it is absolute heaven.
         </p>
             <p><h2> Ingredients </h2></p>
 
-            <ul>
+            <ul class="ingredients">
                 <li>1 pound uncooked spaghetti</li>
                 <li>6 cloves garlic, thiny sliced</li>
                 <li>1/2 cup olive oil</li>
@@ -34,7 +36,7 @@
 
             <p><h2>Steps</h2></p>
              
-                <ol>
+                <ol class="steps">
                     <li><p>Bring a large pot of lightly salted water to a boil. Cook spaghetti in the boiling 
                         water, stirring occasionally until cooked through but firm to the bite, about 12 
                         minutes. Drain and transfer to a pasta bowl. 
@@ -53,5 +55,8 @@
 
                     <li>Serve pasta topped with the remaining Parmigiano-Reggiano cheese.</li>
                 </ol>
+                    <img src="/home/elena/repos/odin-recipes/images/odin-mascot.svg" alt="Odin pic" class="odin-mascot">
+
+                    
     </body>
     </html>
