the-odin-project.png

--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <img src="/home/elena/repos/odin-recipes/images/the-odin-project.png" alt="The Odin Project" class="center">
+        <img src="./the-odin-project.png" alt="The Odin Project" class="center">
         <h1>Odin Recipes</h1>
 
-            <img src="/home/elena/repos/odin-recipes/images/pasta.png" alt="Pasta on plate" class="pasta">
+            <img src="./pasta.png" alt="Pasta on plate" class="pasta">
             <h2><a href="recipes/spaghetti.html">Spaghetti Aglio e Olio</a></h2>
 
-            <img src="/home/elena/repos/odin-recipes/images/racoon.png" alt="Meatballs" class="racoon">
+            <img src="./racoon.png" alt="Meatballs" class="racoon">
             <h2><a href="recipes/meatballs.html">Italian Meatballs</a></h2>
 
-            <img src="/home/elena/repos/odin-recipes/images/panna-cotta.png" alt="Panna-cotta" class="panna-cotta">
+            <img src="./panna-cotta.png" alt="Panna-cotta" class="panna-cotta">
             <h2><a href="recipes/panna-cotta.html">Panna Cotta</a></h2>
 
-            <img src="/home/elena/repos/odin-recipes/images/odin-mascot.svg" alt="Odin pic" class="odin-mascot">
+            <img src="./odin-mascot.svg" alt="Odin pic" class="odin-mascot">
         </body>
 </html>
