--- a/recipes/meatballs.html
+++ b/recipes/meatballs.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="meatballs.css">
     </head>
     <body>
-        <img src="/home/elena/repos/odin-recipes/images/the-odin-project.png" alt="The Odin Project" class="center">
+        <img src="./the-odin-project.png" alt="The Odin Project" class="center">
         <h1>The Perfect Italian Meatballs</h1>
             <img src="./meatballs.jpg" alt="The photo of Italian Meatballs" class="meatballs">
         <p><h2> Description </h2></p>
@@ -46,6 +46,6 @@
                                 and drain on a paper towel. (If your mixture is too wet, cover 
                                 the meatballs while they are cooking so that they hold their shape better.) </li>
                         </ol>
-                        <img src="/home/elena/repos/odin-recipes/images/odin-mascot.svg" alt="Odin pic" class="odin-mascot">
+                        <img src="./odin-mascot.svg" alt="Odin pic" class="odin-mascot">
     </body>
 </html>
