--- a/recipes/panna-cotta.html
+++ b/recipes/panna-cotta.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="panna-cotta.css">
     </head>
     <body>
-        <img src="/home/elena/repos/odin-recipes/images/the-odin-project.png" alt="The Odin Project" class="center">
+        <img src="./the-odin-project.png" alt="The Odin Project" class="center">
         <h1>Italian Panna Cotta</h1>
             <img src="./panna-cotta.jpg" alt="The photo of Panna Cotta in glass" class="panna-cotta">
         <p><h2> Description </h2></p>
@@ -44,6 +44,6 @@
                                 preferably overnight. 
                             </li>
                         </ol>
-                        <img src="/home/elena/repos/odin-recipes/images/odin-mascot.svg" alt="Odin pic" class="odin-mascot">
+                        <img src="./odin-mascot.svg" alt="Odin pic" class="odin-mascot">
     </body>
 </html>
