--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="spaghetti.css">
     </head>
     <body>
-        <img src="/home/elena/repos/odin-recipes/images/the-odin-project.png" alt="The Odin Project" class="center">
+        <img src="./the-odin-project.png" alt="The Odin Project" class="center">
         <h1>Spaghetti Aglio e Olio</h1>
             <img src="./spaghetti-aglio-e-olio.jpg" alt="The photo of Spaghetti AGlio e Olio" class="spaghetti">
         <p><h2> Description </h2></p>
@@ -55,7 +55,7 @@
 
                     <li>Serve pasta topped with the remaining Parmigiano-Reggiano cheese.</li>
                 </ol>
-                    <img src="/home/elena/repos/odin-recipes/images/odin-mascot.svg" alt="Odin pic" class="odin-mascot">
+                    <img src="./odin-mascot.svg" alt="Odin pic" class="odin-mascot">
 
                     
     </body>
